# prepMaxAIBackend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  implementationplan.md  masterplan.md  pyproject.toml  testplan.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase1_tables.py  0003_phase2_schema.py  0004_seed_canonical_exercises.py  0005_phase3_sessions.py  0006_phase4_meals.py  0007_phase5_progress.py  0008_phase6_competitions.py
app/: config.py  main.py
app/auth/: supabase_jwt.py
app/db/: session.py
app/lib/: calorie_engine.py  one_rm.py  photo_util.py  places.py  sse.py
app/llm/: anthropic_provider.py  base.py  openai_provider.py  router.py
app/middleware/: logging_mw.py  rate_limit.py  request_id.py  test_gate.py
app/routes/: admin.py  ai_routes.py  auth.py  competitions.py  health.py  meals.py  preps.py  profile.py  progress.py  sessions.py  test_endpoints.py  workouts.py
app/schemas/: auth.py  competition.py  meal.py  prep.py  profile.py  progress.py  session.py  workout.py
app/services/: canonicalization.py  competition_service.py  meal_service.py  prep_service.py  profile_service.py  progress_service.py  session_service.py  workout_service.py
config/: llm_routing.yaml
scripts/: gen_apple_secret.py
tests/: conftest.py
tests/integration/: test_admin.py  test_auth.py  test_competitions.py  test_error_handlers.py  test_health.py  test_meals.py  test_preps.py  test_profile.py  test_progress.py  test_sessions.py  test_test_ui.py
tests/unit/: test_admin.py  test_calorie_engine.py  test_jwt.py  (+7 more)
(+38 files in other folders)
